# umbrella

./: .env.example  .gitmodules  LICENSE  README.md  compose.yaml
backend/: Dockerfile  README.md  main.py  pyproject.toml
backend/alembic/: env.py
backend/src/: __init__.py  app.py  settings.py  unit_of_work.py
backend/src/adapters/database/: repositories.py  repository_gateway.py  session.py
backend/src/adapters/database/models/: __init__.py  article.py  base.py  enums.py  manager.py  news.py  pet.py  pet_status.py  pet_type.py  transaction.py
backend/src/adapters/filestorage/: repository.py  session.py
backend/src/admin/models/: __init__.py  manager.py  news.py  pet.py  pet_status.py  pet_type.py  transaction.py
backend/src/admin/override_fastadmin/: __init__.py  custom_model_admin.py
backend/src/admin/override_fastadmin/mixins/: __init__.py  content_mixin.py  fastadmin_mixin.py  sqlalchemy_mixin.py
backend/src/admin/override_fastadmin/utils/: __init__.py  content_parameter.py  custom_column.py  doc_preview.py
backend/src/api/: __init__.py  healthcheck.py  router.py
backend/src/api/versions/: __init__.py
backend/src/api/versions/v1/: __init__.py  news.py  pet.py  router.py
backend/src/schemas/admin/: manager.py  news.py  pet.py  pet_status.py  pet_type.py  transaction.py
backend/src/schemas/api/: __init__.py  news.py  pet.py
backend/src/service/: __init__.py  news.py  pet.py
backend/src/utils/: exceptions.py  fastadmin_parts.py  filestorage.py  get_file_url.py  password.py  repository.py  time.py  validating_base64.py
dumps/: dump.sql
(+2 files in other folders)
